# cortex-memory-os

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
adapters/browser-extension/: README.md  content-script.js  manifest.json  service-worker.js
adapters/terminal-shell/: README.md  cortex-terminal-hook.zsh
docs/adr/: 0001-engineering-control-plane.md  0002-evidence-first-memory-loop.md  0003-runtime-shell-and-local-service.md  0004-untrusted-pointing-proposals.md  0005-swarm-governance-boundary.md  README.md
docs/architecture/: agent-runtime-trace.md  browser-terminal-adapter-contracts.md  chronicle-hardening-slices.md  consented-real-capture-control.md  context-fusion-stress.md  context-pack-templates.md  dashboard-live-gateway-runtime.md  dashboard-live-proof.md  demo-readiness.md  demo-stress.md  document-to-skill-derivation.md  durable-synthetic-memory-receipts.md  evidence-eligibility-handoff.md  gateway-outcome-postmortem.md  gateway-postmortem-stress.md  hybrid-context-fusion-index.md  hybrid-fusion-context-pack-integration.md  live-browser-terminal-adapters.md  live-clicker-demo.md  live-readiness-hardening.md  live-run-computer-safe-task.md  local-adapter-endpoint.md  local-fusion-adapters.md  macos-perception-adapter-contracts.md  manual-adapter-proof.md  memory-lifecycle.md  native-capture-permission-smoke.md  native-shadow-pointer-live-feed.md  native-shadow-pointer-overlay.md  ops-quality-surface.md  outcome-postmortem-trace-handoff.md  perception-event-envelope.md  receipt-leak-stress.md  (+13 more)
tests/: test_adapter_endpoint.py  test_benchmark_history.py  test_benchmarks.py  test_capture_budget_queue.py  test_capture_control_server.py  test_capture_preflight_diagnostics.py  test_capture_readiness_ladder.py  test_clicky_ux.py  test_context_fusion.py  test_context_templates.py  test_contracts.py  test_dashboard_encrypted_index.py  test_dashboard_gateway_actions.py  test_dashboard_live_data_adapter.py  test_dashboard_live_gateway.py  test_dashboard_live_proof.py  test_dashboard_shell.py  test_debug_trace.py  test_demo_readiness.py  test_demo_stress.py  test_durable_synthetic_memory_receipts.py  test_encrypted_graph_index.py  test_evidence_eligibility.py  test_evidence_vault.py  test_fusion_adapters.py  test_gateway_postmortem_stress.py  test_hybrid_index.py  test_key_management.py  test_keychain_key_adapter.py  test_live_adapters.py  test_live_clicker_demo.py  test_live_openai_smoke.py  test_live_readiness.py  test_live_run_safe_task.py  test_macos_perception_adapters.py  test_manual_adapter_proof.py  test_mcp_server.py  test_memory_compiler.py  test_memory_encryption.py  test_memory_export.py  (+44 more)
(+164 files in other folders)
