[project]
name = "cortex-memory-os"
version = "0.1.0"
description = "Evidence-first memory substrate for AI agents."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7,<3",
]

[project.scripts]
cortex-bench = "cortex_memory_os.benchmarks:main"
cortex-bench-history = "cortex_memory_os.benchmark_history:main"
cortex-mcp = "cortex_memory_os.mcp_server:main"
cortex-openai-smoke = "cortex_memory_os.live_openai_smoke:main"
cortex-plugin-install-smoke = "cortex_memory_os.plugin_install_smoke:main"
cortex-live-adapter-smoke = "cortex_memory_os.live_adapters:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0,<9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
