[project]
name = "cortex-memory-os"
version = "0.1.0"
description = "Evidence-first memory substrate for AI agents."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7,<3",
]

[project.scripts]
cortex-bench = "cortex_memory_os.benchmarks:main"
cortex-bench-history = "cortex_memory_os.benchmark_history:main"
cortex-ops-quality = "cortex_memory_os.ops_quality:main"
cortex-mcp = "cortex_memory_os.mcp_server:main"
cortex-openai-smoke = "cortex_memory_os.live_openai_smoke:main"
cortex-live-readiness = "cortex_memory_os.live_readiness:main"
cortex-plugin-install-smoke = "cortex_memory_os.plugin_install_smoke:main"
cortex-live-adapter-smoke = "cortex_memory_os.live_adapters:main"
cortex-adapter-endpoint = "cortex_memory_os.adapter_endpoint:main"
cortex-manual-adapter-proof = "cortex_memory_os.manual_adapter_proof:main"
cortex-dashboard-shell = "cortex_memory_os.dashboard_shell:main"
cortex-dashboard-live-proof = "cortex_memory_os.dashboard_live_proof:main"
cortex-dashboard-live-gateway = "cortex_memory_os.dashboard_live_gateway:main"
cortex-live-run-safe-task = "cortex_memory_os.live_run_safe_task:main"
cortex-plugin-enable-plan = "cortex_memory_os.plugin_enable_plan:main"
cortex-native-permission-smoke = "cortex_memory_os.native_permission_smoke:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0,<9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
